# dbgmcp

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
examples/: bug.py  crash.c
src/: gdb.rs  lib.rs  main.rs
