[package]
name = "dbgmcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gdb-mcp"
path = "src/bin/gdb.rs"

[[bin]]
name = "lldb-mcp"
path = "src/bin/lldb.rs"

[[bin]]
name = "pdb-mcp"
path = "src/bin/pdb.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server"] }
tokio = { version = "1.44", features = ["io-std", "process"] }
serde = { version = "1.0", features = ["derive"] }
